--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,6 @@
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -12,9 +14,60 @@ body {
   line-height: 1.5;
 }
 
-#search-box {
-  font: inherit;
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  width: 100%;
   padding: 8px;
-  max-width: 320px;
-  margin-bottom: 16px;
+  margin-bottom: 24px;
+}
+.searchTerm {
+  width: 30%;
+  border: 3px solid #00b4cc;
+  font-size: 16px;
+  border-right: none;
+  padding: 5px;
+  height: 36px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #00b4cc;
+}
+
+.searchButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 45px;
+  height: 36px;
+  border: 4px solid #00b4cc;
+  background: #00b4cc;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+}
+
+.button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid #00b4cc;
+  border-radius: 5px;
+  background: #00b4cc;
+  color: #fafafa;
+  font-size: 16px;
+  width: 130px;
+  height: 36px;
+}
+
+.button.is-hidden {
+  display: none;
+}
+
+.button > .spinner.is-hidden {
+  display: none;
 }
