--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,4 @@
-*,
-*::before,
-*::after {
+* {
   box-sizing: border-box;
 }
 
@@ -12,6 +10,23 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  margin: 0;
+  background-image: linear-gradient(
+    55deg,
+    hsl(187deg 68% 72%) 0%,
+    hsl(190deg 68% 79%) 12%,
+    hsl(193deg 64% 85%) 27%,
+    hsl(197deg 50% 90%) 51%,
+    hsl(200deg 10% 94%) 100%
+  );
+}
+
+a {
+  text-decoration: none;
+}
+
+p {
+  margin: 0;
 }
 
 img {
@@ -20,17 +35,27 @@ img {
   height: auto;
 }
 
+.form-wrap {
+  width: 100%;
+  background-color: #c7cfd4;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  position: sticky;
+  z-index: 100;
+  padding: 8px;
+  box-shadow: 0 1px 3px rgba(4, 91, 114, 0.12),
+    0 1px 1px rgba(3, 137, 163, 0.14), 0 2px 1px rgba(241, 241, 241, 0.2);
+}
+
 .search-form {
   display: flex;
   justify-content: center;
   width: 100%;
-  padding: 8px;
-  margin-bottom: 24px;
 }
 .searchTerm {
   width: 30%;
   border: 3px solid #00b4cc;
-  font-size: 16px;
+  font-size: 20px;
   border-right: none;
   padding: 5px;
   height: 36px;
@@ -46,9 +71,16 @@ img {
   width: 45px;
   height: 36px;
   border: 4px solid #00b4cc;
-  background: #00b4cc;
+  background-color: #00b4cc;
   border-radius: 0 5px 5px 0;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.searchButton:hover,
+.searchButton:focus {
+  background-color: #13c5dc;
+  border-color: #13c5dc;
 }
 
 .button {
@@ -57,11 +89,18 @@ img {
   margin-right: auto;
   border: 1px solid #00b4cc;
   border-radius: 5px;
-  background: #00b4cc;
+  background-color: #00b4cc;
   color: #fafafa;
   font-size: 16px;
-  width: 130px;
-  height: 36px;
+  /* width: 130px;
+  height: 36px; */
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button:hover,
+.button:focus {
+  background-color: #60dced;
+  border-color: #60dced;
 }
 
 .button.is-hidden {
@@ -70,4 +109,49 @@ img {
 
 .button > .spinner.is-hidden {
   display: none;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 20px;
+  padding: 0;
+  max-width: calc(100vw - 80px);
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+.photo-card {
+  border: 2px solid #c7cfd4;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 1px 3px rgba(4, 91, 114, 0.12),
+    0 1px 1px rgba(3, 137, 163, 0.14), 0 2px 1px rgba(241, 241, 241, 0.2);
+  transition: all 0.3s;
+}
+.photo-card:hover,
+.photo-card:focus {
+  transform: scale(1.05);
+}
+.info {
+  display: flex;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  color: #0391a4;
+}
+
+.info-item {
+  text-align: center;
+}
+.info-item:not(:last-child) {
+  margin-right: 15px;
+}
+
+.gallary-image {
+  display: block;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
 }
