--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,14 +11,7 @@ body {
   color: #212121;
   line-height: 1.5;
   margin: 0;
-  background-image: linear-gradient(
-    55deg,
-    hsl(187deg 68% 72%) 0%,
-    hsl(190deg 68% 79%) 12%,
-    hsl(193deg 64% 85%) 27%,
-    hsl(197deg 50% 90%) 51%,
-    hsl(200deg 10% 94%) 100%
-  );
+  background: linear-gradient(270deg, #cdf4fa, #f2f6f8);
 }
 
 a {
@@ -92,8 +85,9 @@ img {
   background-color: #00b4cc;
   color: #fafafa;
   font-size: 16px;
-  /* width: 130px;
-  height: 36px; */
+  width: 120px;
+  height: 36px;
+  text-shadow: 3px 5px 2px #474747;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -118,7 +112,9 @@ img {
   margin-bottom: 30px;
   margin-top: 30px;
 }
+
 .photo-card {
+  background: linear-gradient(270deg, #afe7ef, #c7cfd4);
   border: 2px solid #c7cfd4;
   border-radius: 10px;
   overflow: hidden;
@@ -129,6 +125,9 @@ img {
 .photo-card:hover,
 .photo-card:focus {
   transform: scale(1.05);
+  -webkit-box-shadow: 0px 10px 13px -7px #000000,
+    4px 1px 14px 5px rgba(0, 0, 0, 0);
+  box-shadow: 0px 10px 13px -7px #000000, 4px 1px 14px 5px rgba(0, 0, 0, 0);
 }
 .info {
   display: flex;
@@ -150,4 +149,19 @@ img {
   width: 100%;
   height: 200px;
   object-fit: cover;
+}
+
+@media screen and (max-width: 480px) {
+  .gallery {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .searchTerm {
+    width: 70%;
+  }
+  .info-item {
+    font-size: 14px;
+  }
+  font-size: 20px;
 }
