--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -129,6 +129,10 @@ img {
     4px 1px 14px 5px rgba(0, 0, 0, 0);
   box-shadow: 0px 10px 13px -7px #000000, 4px 1px 14px 5px rgba(0, 0, 0, 0);
 }
+
+.gallary-image:hover {
+  transform: scale(1.2);
+}
 .info {
   display: flex;
   flex-wrap: nowrap;
