--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -87,7 +87,7 @@ img {
   font-size: 16px;
   width: 120px;
   height: 36px;
-  text-shadow: 3px 5px 2px #474747;
+  text-shadow: 2px 3px 2px #474747;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -119,7 +119,7 @@ img {
   border-radius: 10px;
   overflow: hidden;
   box-shadow: 0 1px 3px rgba(4, 91, 114, 0.12),
-    0 1px 1px rgba(3, 137, 163, 0.14), 0 2px 1px rgba(241, 241, 241, 0.2);
+    0 1px 1px rgba(4, 102, 122, 0.14), 0 2px 1px rgba(122, 215, 243, 0.2);
   transition: all 0.3s;
 }
 .photo-card:hover,
@@ -142,6 +142,8 @@ img {
   align-content: center;
   justify-content: center;
   color: #0391a4;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .info-item {
